--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "flowbite-react": "^0.6.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.18.0"
+    "react-loading": "^2.0.3",
+    "react-modal": "^3.16.1",
+    "react-router-dom": "^6.18.0",
+    "react-spinners": "^0.13.8",
+    "reactjs-popup": "^2.0.6"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
